styled pages to have cohesion

--- a/src/views/books/_form.pug
+++ b/src/views/books/_form.pug
@@ -1,4 +1,4 @@
-.container.content-styling.well
+.container.header-styling.well
   form(method="post" action=(book.id ? "/books/"+book.id : '/books'))
     .form-group
       label(for='title') Title
