--- a/src/views/books/edit.pug
+++ b/src/views/books/edit.pug
@@ -1,9 +1,9 @@
 extends ../layout
 
 block content
-  ul
-    li
-      a(href="/books/"+book.id) back
+  //- ul
+  //-   li
+  //-     a(href="/books/"+book.id) back
   
   include ./_form.pug
 
